--- a/settings.yaml
+++ b/settings.yaml
@@ -1,67 +1,1 @@
-logging:
-  version: 1
-  disable_existing_loggers: False
-
-  formatters:
-    custom:
-      class: src.logging.formatters.CustomFormatter
-
-  handlers:
-    console:
-      class: logging.StreamHandler
-      formatter: custom
-      level: INFO
-      stream: ext://sys.stdout
-
-    elastic:
-      class: src.logging.elastic_handler.ElasticHandler
-      level: DEBUG
-
-  loggers:
-    elasticsearch:
-      propagate: false
-      level: WARNING
-      handlers:
-        - console
-
-    asyncio:
-      level: INFO
-    urllib3:
-      level: INFO
-    matplotlib:
-      level: INFO
-    amqp:
-      level: WARNING
-    amqp.connection.Connection.heartbeat_tick:
-      level: INFO
-    celery:
-      level: INFO
-    kombu:
-      level: INFO
-    werkzeug:
-      level: INFO
-
-    py.warnings:
-      level: CRITICAL
-
-    debug:
-      level: ERROR
-
-  root:
-    level: INFO
-    handlers:
-      - console
-      - elastic
-
-  default_logger_level: INFO
-
-  logger_levels:
-    # Shortcut to set the levels for loggers
-    # Here the logger levels must be in a dictionary and not list structure
-    # because otherwise, all the logger level settings that we have here
-    # will be deleted by adding settings in other places unintentionally.
-    debug: []
-    info: []
-    warning: []
-    error: []
-    critical: []
+foo: bar
