--- a/src/hephaestus/settings.yaml
+++ b/src/hephaestus/settings.yaml
@@ -78,3 +78,39 @@ logging:
     WARNING: []
     error: []
     critical: []
+
+celery:
+  task_serializer: json
+  accept_content: [json]
+  timezone: "Europe/Warsaw"
+  result_serializer: json
+  result_backend: "rpc://"
+  worker_hijack_root_logger: False
+  worker_disable_rate_limits: True
+  worker_prefetch_multiplier: 1
+  task_acks_late: True
+  worker_max_tasks_per_child: 100
+  worker_max_memory_per_child: 200000
+  task_soft_time_limit: 300
+  task_time_limit: 600
+  task_reject_on_worker_lost: True
+  task_ignore_result: True
+  broker_connection_retry_on_startup: True
+  broker_connection_retry: True
+  broker_connection_max_retries: 10
+  broker_connection_retry_delay: 5.0
+  broker_heartbeat: 30
+  broker_pool_limit: 10
+  result_backend_transport_options:
+    retry_policy:
+      timeout: 5.0
+      max_retries: 3
+  broker_transport_options:
+    retry_policy:
+      timeout: 5.0
+      max_retries: 3
+    confirm_publish: True
+    max_retries: 3
+    interval_start: 0
+    interval_step: 0.2
+    interval_max: 0.2
